--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta property="og:url"           content="http://recreation.forest.gov.tw/Index.aspx" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Your Website Title" />
+    <meta property="og:description"   content="Your description" />
+    <meta property="og:image"         content="http://recreation.forest.gov.tw/images/toppic/masadi.jpg" />
     <title>recreation-forest</title>
   </head>
   <style>
@@ -22,5 +27,13 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <link href="static/css/style.css" rel="stylesheet" type="text/css" />
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.12';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
   </body>
 </html>
