--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>recreation-forest</title>
     <script>
       var imagePath, apiName;
-      imagePath = ''; //'http://cloud.emct.com.tw/';
-      rootPath = ''; //'http://cloud.emct.com.tw';
+      imagePath = 'http://cloud.emct.com.tw/';
+      rootPath = ''; //'http://cloud.emct.com.tw/ForestPark_Templete/';
       apiName = 'fakeData/API_RT_001.json'; //'http://cloud.emct.com.tw/ForestPark_Templete/API/Trail/RT'; 
     </script>
     <style>
